# GiessenDataAnalysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
AnalysisGiessen/: __init__.py
Data/Giessen/Cleaned_Joe/: pat_1_longest_stationary_section.npz  pat_4_longest_stationary_section.npz
Data/Synthetic/Output_200/: resampled_all_pressure_traces_rv
DataAnalysis/: analyse_giessen.ipynb
Tutorials/: Build_emulator_giessen_synthetic.ipynb  analyse_giessen_template.ipynb  calibrate_giessen.ipynb  resample_synthetic.ipynb
giessen_data_analysis/: __init__.py
