[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giessen-data-analysis"
version = "0.1.0"
description = "Code for basic analysis of the Giessen RV pulmonary pressure trace data"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Maximilian Balmus", email = "mbalmus@turing.ac.uk"}
]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: Apache License",
        "Operating System :: OS Independent",
    ],
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "ipykernel",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/MaxBalmus/GiessenDataAnalysis"
"Bug Reports" = "https://github.com/MaxBalmus/GiessenDataAnalysis/issues"
"Source" = "https://github.com/MaxBalmus/GiessenDataAnalysis"

[tool.setuptools.packages.find]
where = ["."]
include = ["giessen_data_analysis*"]